--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,14 +1,29 @@
 name: Deploy Frontend
+
 on:
-  push:
-    branches:
-      - main
+    push:
+        branches:
+            - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t cygnetops/react-test -f Dockerfile.dev .
-      - run: docker run -e CI=true cygnetops/react-test npm test
+    build:
+        runs-on: ubuntu-latest
+
+        steps:
+            # Checkout the repository
+            - uses: actions/checkout@v2
+
+            # Login to Docker Hub using the docker/login-action
+            - name: Log in to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                  username: ${{ secrets.DOCKER_USERNAME }}
+                  password: ${{ secrets.DOCKER_PASSWORD }}
+
+            # Build the Docker image
+            - name: Build Docker image
+              run: docker build -t cygnetops/react-test -f Dockerfile.dev .
+
+            # Run tests inside the container
+            - name: Run tests
+              run: docker run -e CI=true cygnetops/react-test npm test
