--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,3 +27,19 @@ jobs:
             # Run tests inside the container
             - name: Run tests
               run: docker run -e CI=true cygnetops/react-test npm test
+
+      # Deploy to ElasticBeanstalk
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v18
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: frontend
+          environment_name: Frontend-env
+          existing_bucket_name: elasticbeanstalk-eu-central-1-992382369776
+          region: eu-central-1
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
