--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,4 @@
 name: Deploy Frontend
-
 on:
     push:
         branches:
@@ -8,38 +7,25 @@ on:
 jobs:
     build:
         runs-on: ubuntu-latest
-
         steps:
-            # Checkout the repository
-            - uses: actions/checkout@v2
-
-            # Login to Docker Hub using the docker/login-action
-            - name: Log in to Docker Hub
-              uses: docker/login-action@v2
+            - uses: actions/checkout@v3
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
                   password: ${{ secrets.DOCKER_PASSWORD }}
+            - run: docker build -t cygnetops/react-test -f Dockerfile.dev .
+            - run: docker run -e CI=true cygnetops/react-test npm test
 
-            # Build the Docker image
-            - name: Build Docker image
-              run: docker build -t cygnetops/react-test -f Dockerfile.dev .
+            - name: Generate deployment package
+              run: zip -r deploy.zip . -x '*.git*'
 
-            # Run tests inside the container
-            - name: Run tests
-              run: docker run -e CI=true cygnetops/react-test npm test
-
-      # Deploy to ElasticBeanstalk
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
-
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v18
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: frontend
-          environment_name: Frontend-env
-          existing_bucket_name: elasticbeanstalk-eu-central-1-992382369776
-          region: eu-central-1
-          version_label: ${{ github.sha }}
-          deployment_package: deploy.zip
+            - name: Deploy to EB
+              uses: einaregilsson/beanstalk-deploy@v18
+              with:
+                  aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+                  aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+                  application_name: frontend
+                  environment_name: Frontend-env
+                  existing_bucket_name: elasticbeanstalk-eu-central-1-992382369776
+                  region: eu-central-1
+                  version_label: ${{ github.sha }}
+                  deployment_package: deploy.zip
